apps/dev/zigbee2mqtt/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: zigbee.iot.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:YfLMsKRIrk+ERyLPESyemUfgnGToAno8UyvljAI=,iv:Ruxj05BYCV/41sE1rxDDV7h9335wax05dN2QFDnF9wQ=,tag:eTGM/IGXS8ypqUaI7wQ/Vw==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:E2TiqgSeaezz7VUuW1SSN27URxawtw==,iv:rWlETVLBpzEQXndgp6cUofhVj8lOVBP2C8AEKyf2TBU=,tag:uVAYyegWLzzo2lV9OupkEA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: zigbee2mqtt-production
    namespace: iot
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:/1XaedYUip3CV17+3DNpbaclpRlO9HY7NcXBsL1XxGIR+UD7IA==,iv:LjdZ6QU7mAnPdu2ItPcK2XPLyjwvb+yk+Knm7S+hBPs=,tag:YE/ipreegmP0keupYvYK1A==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: zigbee2mqtt
              namespace: iot
    tls:
        domains:
            - main: ENC[AES256_GCM,data:ILSBI7kyLDZKxmVJN6fVJCuzNoLdeg==,iv:FtdUXKKnZX2W+oNX1S+hRQOheKYcZcwAI1T3EKJvBso=,tag:HOeHnyI7vIDQQkm5rapsvw==,type:str]
              sans:
                - ENC[AES256_GCM,data:QIf3vtulBp5ZpdaynPEfKfibhTNbyAM=,iv:7D03XmZql7tSTZDncOt2IAxbuvscl0ZCi1pdn0jpPL4=,tag:k8+jUn6OpsNtrCgQVMRAzQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: zigbee2mqtt-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPOE9UUjhVcmhIN1Uzci9L
[...]
            u3wjVOn24ww1sM2ha+J8MINuQPtNx6LG7C4vqV0L99+0mHmbYQQ5mg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-10T12:00:46Z"
    mac: ENC[AES256_GCM,data:6ebLqGhlwQwN9p131bOOFisb9akk+DrowvggVFM5EYn+Ag8zqOs18YlLBFXiaPrqOMig4JWKZ9+FTPHeglQxH8nL/ZyRD0UFnCUeR7guwYc08i5wa9oQoHGUfQJ4lg1aIT0tzpI82QqqWAUIZVpb9goIWroPj4eqcl8ct8iRhuQ=,iv:TQT19yTlJp7ZSCNfAkJTG8a9wNDsp1sNGbMGZHRMct8=,tag:eYVUOP74unLP954Gemvecg==,type:str]
    pgp:
        - created_at: "2024-10-10T12:00:46Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAjKpqUNoZMwV6/jd3OMLzdlI6X3t6+GI1qjXU3gAb14MU
[...]
            =Aazt
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(ca.crt|client.crt|client.key|externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
