apps/dev/zigbee2mqtt/resources/ingressroute.staging.sops.tmp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: zigbee.iot.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: zigbee.iot.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/target: iot.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: zigbee2mqtt-staging
    namespace: iot
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`zigbee.iot.anotherlife.org.pl`)
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: zigbee2mqtt
              namespace: iot
    tls:
        domains:
            - main: iot.anotherlife.org.pl
              sans:
                - .iot.anotherlife.org.pl
        options:
            name: tls-ver13
            namespace: traefik
        secretName: zigbee2mqtt-cf-staging
