apps/dev/zigbee2mqtt/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: zigbee.iot.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:xN6glSU6e2idkrKUGfChGUIahBSRIjA3WXEWO9k=,iv:bjkVMRS43cPx6rAukHV96QIgvTTOAOOf3AXj5l4q69o=,tag:i9v6qgJ0s83+r4Y/6+qx2Q==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:yrUS3tpm826+Wno0nsxiR8QeNS52ug==,iv:jkYDu+mxNI0L0dSBIMQuGgyBcl6f5OEoeaGKSTaX5B4=,tag:wxemHufHYv85nX/QaTVPkQ==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: zigbee2mqtt-staging
    namespace: iot
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:a9vQg3t1BT8D5bTCetkEuWa3zXTCy/RhItusPr7MyexbS4/7YQ==,iv:0OuEzCbBgI0zs9UKqWPCHhWbStHPKNIPoeehqgZ2MLI=,tag:pz20XuM9QOtrZvbXqzSFug==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: zigbee2mqtt
              namespace: iot
    tls:
        domains:
            - main: ENC[AES256_GCM,data:KLKNjQPT60AFPaZZWji7EUuES29BjA==,iv:wdh/uTZEzzeOYN21Xz3twm+8Nz9NZ3P8PRyLnJKzljU=,tag:thdlTPAmDaNWi9O5vBK2cQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:mepbX70QrvFWl2LY/JTdDXyouanGFfg=,iv:cbT2Fug8A0IlVDeH/RPUk2izNRkNDJBNGYNJ6ulnKVk=,tag:nHnFdBnP/NgIhUrFctuPEw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: zigbee2mqtt-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPMWd4OHpFU3lWNWtoeVRJ
[...]
            KmiZADGx23AD0QRLTsDVB6SpQ0qcwPBuy27LR/XyCQ+M/ZKNqRcROw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-10T12:00:50Z"
    mac: ENC[AES256_GCM,data:RfXBKjgJiEqCk2JKVSefwyuQtOesNSx+uc/2Do+Xi8khSYCL+dt0tzqMZHnDEerDK478xdawq0t88xiT77/8uop/LptCDmyZHLcq9kJP7lnVhvIwW8dLNwxn0RGJvqNJxFvKBndzLUHc/pgXGt/vProe7YK3jWLVCTbsGVSdCe0=,iv:Mp9KhHc76oViZli5tl8v1KmWNJoiaioSEpwomW7GVZk=,tag:BKLWPO/xgOPx0xRDMGxHcw==,type:str]
    pgp:
        - created_at: "2024-10-10T12:00:50Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAo9fJyiu5rxcgnrj6uZ4+jgu2eSIZj+Im+aHO82J5iu4Q
[...]
            =wLHr
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(ca.crt|client.crt|client.key|externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
